modified some figures

--- a/parameter_plots/mcmc_priors.ipynb
+++ b/parameter_plots/mcmc_priors.ipynb
@@ -16,26 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#%matplotlib notebook\n",
     "import netCDF4 as nc4\n",
     "import numpy as np\n",
-    "import pystan\n",
     "\n",
     "# load data\n",
     "datafiles = {\n",
-    "    #'seaflow':'../data/SeaFlow_SizeDist_regrid-25-8.nc',\n",
+    "    'seaflow':'../data/SeaFlow_SizeDist_regrid-25-8.nc',\n",
     "    'zinser':'../data/Zinser_SizeDist_calibrated-26-6.nc',\n",
     "}\n",
+    "\n",
     "itestfiles = {\n",
-    "    #'seaflow':'../data/Zinser_SizeDist_calibrated-26-6-itest.csv', # same as zinser\n",
-    "    'zinser':'../data/Zinser_SizeDist_calibrated-26-6-itest.csv',       \n",
+    "    'seaflow':'../data/Zinser_SizeDist_calibrated-26-6-itest.csv', # same as zinser\n",
+    "    'zinser':'../data/Zinser_SizeDist_calibrated-26-6-itest.csv',         \n",
     "}\n",
+    "\n",
     "desc = {\n",
-    "    #'seaflow':'SeaFlow dataset',\n",
+    "    'seaflow':'SeaFlow dataset',\n",
     "    'zinser':'Zinser dataset',    \n",
     "}\n",
     "data_gridded = {}\n",
@@ -46,14 +47,23 @@
     "            data_gridded[k][var] = nc.variables[var][:]\n",
     "    desc[k] += ' (m={data[m]}, $\\Delta_v^{{-1}}$={data[delta_v_inv]})'.format(data=data_gridded[k])\n",
     "\n",
-    "data_gridded[k]['PAR'] *= 200.0/22.0 # make light similar for this experiment (it is later normalized by E_star) "
+    "data_gridded[k]['PAR'] *= 200.0/22.0 # make light similar for this experiment (it is later normalized by E_star)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\PhytoGreg\\Anaconda3\\lib\\site-packages\\numpy\\core\\fromnumeric.py:734: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
+      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
+     ]
+    }
+   ],
    "source": [
     "data = {}\n",
     "\n",
@@ -111,9 +121,9 @@
     "    # for now, add pseudo-count data\n",
     "    data[k]['obs_count'] = (1000*data[k]['obs']).astype(int)\n",
     "    \n",
-    "    # consistency check\n",
-    "    #if len(data[k]['i_test']) != data[k]['nt_obs']:\n",
-    "    #    raise ValueError('Invalid number of testing indices for \"{}\" (expected {}, got {}).'.format(k,data[k]['nt_obs'],len(data[k]['i_test'])))"
+    "        # consistency check\n",
+    "    if len(data[k]['i_test']) != data[k]['nt_obs']:\n",
+    "        raise ValueError('Invalid number of testing indices for \"{}\" (expected {}, got {}).'.format(k,data[k]['nt_obs'],len(data[k]['i_test'])))"
    ]
   },
   {
@@ -125,109 +135,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelfiles_prior = {\n",
-    "    'm1p':'../stancode_gallery1_priors/matrixmodel_multinom_estinilnorm_freedelta_normparam_trackgrowth_xval_PRIOR.stan',\n",
-    "    'm2p':'../stancode_gallery1_priors/matrixmodel_multinom_estinilnorm_monodelta_normparam_trackgrowth_xval_PRIOR.stan',\n",
-    "    'm3p':'../stancode_gallery1_priors/matrixmodel_multinom_estinilnorm_monodelta_gammaiv6_normparam_trackgrowth_xval_PRIOR.stan',\n",
-    "    'm4p':'../stancode_gallery1_priors/matrixmodel_multinom_estinilnorm_monodelta_respv1_normparam_trackgrowth_xval_PRIOR.stan',\n",
-    "    'm5p':'../stancode_gallery1_priors/matrixmodel_multinom_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval_PRIOR.stan',\n",
-    "    'm6p':'../stancode_gallery1_priors/matrixmodel_multinom_estinilnorm_monodelta_respiv6_normparam_trackgrowth_xval_PRIOR.stan',\n",
-    "    'm7p':'../stancode_gallery1_priors/matrixmodel_multinom_estinilnorm_monodelta_respiv7_normparam_trackgrowth_xval_PRIOR.stan',\n",
-    "    'm8p':'../stancode_gallery1_priors/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv6_normparam_trackgrowth_xval_PRIOR.stan', \n",
-    "    'm9p':'../stancode_gallery1_priors/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv7_normparam_trackgrowth_xval_PRIOR.stan',\n",
-    "    'm10p':'../stancode_gallery1_priors/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respv2_normparam_trackgrowth_xval_PRIOR.stan',\n",
+    "import pystan\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelfiles = {\n",
+    "#    'm1': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_freedelta_normparam_trackgrowth_xval2.stan',\n",
+    "#    'm2': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_normparam_trackgrowth_xval2.stan',\n",
+    "#    'm3': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_gammaiv6_normparam_trackgrowth_xval2.stan', \n",
+    "#    'm4': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respv1_normparam_trackgrowth_xval2.stan', \n",
+    "    'm5': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respv2_normparam_trackgrowth_xval2.stan', \n",
+    "#    'm6': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respiv6_normparam_trackgrowth_xval2.stan', \n",
+    "    'm7': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respiv7_normparam_trackgrowth_xval2.stan',\n",
+    "#    'm8': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respiv6_normparam_trackgrowth_xval2.stan', \n",
+    "#    'm9': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respiv7_normparam_trackgrowth_xval2.stan', \n",
+    "#    'm10': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respv2_normparam_trackgrowth_xval2.stan', \n",
+    "#    'm11': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv6_normparam_trackgrowth_xval2.stan', \n",
+    "#    'm12': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv7_normparam_trackgrowth_xval2.stan', \n",
+    "#    'm13': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv6_normparam_trackgrowth_xval2.stan', \n",
+    "#    'm14': '../stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv7_normparam_trackgrowth_xval2.stan',\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m1 NOW.\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m5 NOW.\n",
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m7 NOW.\n"
      ]
     }
    ],
    "source": [
-    "#models = {}\n",
-    "#for name in modelfiles:\n",
-    "#        models[name] = pystan.StanModel(file=modelfiles[name], model_name=name, obfuscate_model_name=False)"
+    "models = {}\n",
+    "for name in modelfiles:\n",
+    "        models[name] = pystan.StanModel(file=modelfiles[name], model_name=name, obfuscate_model_name=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m1p NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m2p NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m3p NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m4p NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m5p NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m6p NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m7p NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m8p NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m9p NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m10p NOW.\n"
-     ]
-    }
-   ],
-   "source": [
-    "models_prior = {}\n",
-    "for name in modelfiles_prior:\n",
-    "    models_prior[name] = pystan.StanModel(file=modelfiles_prior[name], model_name=name, obfuscate_model_name=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:pystan:Rhat above 1.1 or below 0.9 indicates that the chains very likely have not mixed\n",
-      "WARNING:pystan:3322 of 4000 iterations ended with a divergence (83 %).\n",
+      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
+      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
+      "WARNING:pystan:2775 of 4000 iterations ended with a divergence (69.4 %).\n",
       "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:Chain 1: E-BFMI = 0.176\n",
-      "WARNING:pystan:Chain 2: E-BFMI = 0.108\n",
-      "WARNING:pystan:Chain 3: E-BFMI = 0.163\n",
-      "WARNING:pystan:Chain 4: E-BFMI = 0.119\n",
-      "WARNING:pystan:E-BFMI below 0.2 indicates you may need to reparameterize your model\n",
-      "WARNING:pystan:3677 of 4000 iterations ended with a divergence (91.9 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:3569 of 4000 iterations ended with a divergence (89.2 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:3961 of 4000 iterations ended with a divergence (99 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:Rhat above 1.1 or below 0.9 indicates that the chains very likely have not mixed\n",
-      "WARNING:pystan:3971 of 4000 iterations ended with a divergence (99.3 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:Rhat above 1.1 or below 0.9 indicates that the chains very likely have not mixed\n",
-      "WARNING:pystan:3972 of 4000 iterations ended with a divergence (99.3 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:3931 of 4000 iterations ended with a divergence (98.3 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:Rhat above 1.1 or below 0.9 indicates that the chains very likely have not mixed\n",
-      "WARNING:pystan:3971 of 4000 iterations ended with a divergence (99.3 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:Rhat above 1.1 or below 0.9 indicates that the chains very likely have not mixed\n",
-      "WARNING:pystan:3998 of 4000 iterations ended with a divergence (100 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:3951 of 4000 iterations ended with a divergence (98.8 %).\n",
+      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
+      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
+      "WARNING:pystan:2809 of 4000 iterations ended with a divergence (70.2 %).\n",
       "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n"
      ]
     }
@@ -235,8 +216,8 @@
    "source": [
     "mcmcs_prior = {}\n",
     "\n",
-    "for name in models_prior:\n",
-    "    mcmcs_prior[name] = models_prior[name].sampling(data=data['zinser'],iter=2000)\n",
+    "for name in models:\n",
+    "    mcmcs_prior[name] = models[name].sampling(data=data['zinser'],iter=2000)\n",
     "    df = pystan.misc.to_dataframe(mcmcs_prior[name])\n",
     "    df.to_csv(\"prior_{name}.csv\".format(name=name),index=False)"
    ]
@@ -492,9 +473,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "data"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
