snapshot of template before overhaul

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -29,7 +29,7 @@
     "use_testdata = False\n",
     "\n",
     "# create plots of the data\n",
-    "show_data = False\n",
+    "show_data = True\n",
     "\n",
     "# netCDF output file (set to None to not save output)\n",
     "savename_output = None\n",
@@ -69,8 +69,9 @@
     "\n",
     "# load data\n",
     "datafiles = {\n",
-    "    'seaflow':'data/SeaFlow_SizeDist_regrid-25-8.nc',\n",
+    "    #'seaflow':'data/SeaFlow_SizeDist_regrid-25-8.nc',\n",
     "    'zinser':'data/Zinser_SizeDist_calibrated-26-6.nc',\n",
+    "    #'seaflow':'data/SeaFlow_PSD_hourlyCOUNT_m32.csv',\n",
     "}\n",
     "\n",
     "itestfiles = {\n",
@@ -89,14 +90,16 @@
     "    with nc4.Dataset(datafiles[dataname]) as nc:\n",
     "        for var in nc.variables:\n",
     "            data_gridded[dataname][var] = nc.variables[var][:]\n",
-    "    desc[dataname] += ' (m={data[m]}, $\\Delta_v^{{-1}}$={data[delta_v_inv]})'.format(data=data_gridded[dataname])\n",
     "\n",
-    "# Now we load in count data\n",
+    "\n",
     "for dataname in datafiles:\n",
-    "\n",
-    "    if 'seaflow' in dataname:\n",
-    "        # Extract SeaFlow cell counts\n",
-    "        seaflow = pd.read_csv('data/SeaFlow_PSD_hourlyCOUNT_m32.csv')\n",
+    "    if datafiles[dataname].endswith('.csv') and 'seaflow' in dataname:\n",
+    "        \n",
+    "        #\n",
+    "        # SeaFlow: if csv file is specified, load entire dataset from csv file\n",
+    "        #\n",
+    "        \n",
+    "        seaflow = pd.read_csv(datafiles[dataname])\n",
     "        seaflow_counts = seaflow.values[:, 2:].T.astype(int)\n",
     "\n",
     "        # Redefine parameters to match 32-size class count data. We only keep PAR from the 25-size class data.\n",
@@ -116,18 +119,22 @@
     "                initial = datetime\n",
     "            data_gridded['seaflow']['obs_time'][ii] = (datetime - initial).total_seconds()/60\n",
     "            ii += 1\n",
-    "\n",
-    "    elif 'zinser' in dataname:\n",
-    "\n",
-    "        # Extract Zinser cell counts\n",
+    "    if 'zinser' in dataname:\n",
+    "        \n",
+    "        #\n",
+    "        # Zinser: load count data and adjust data read from netCDF file\n",
+    "        #\n",
+    "        \n",
     "        zinser = pd.read_csv('data/Zinser_Figure2A.csv')\n",
     "        #zinser_counts = zinser.values[:,1].astype(int) # cells A column\n",
     "        #zinser_counts = zinser.values[:,2].astype(int) # cells B column\n",
     "        zinser_counts = np.mean(zinser.values, axis=1).astype(int) # mean of both columns\n",
-    "        \n",
+    "\n",
     "        # Add counts to Zinser data\n",
     "        data_gridded[dataname]['counts'] = (data_gridded[dataname]['w_obs'] * zinser_counts).astype(int)\n",
-    "        data_gridded[dataname]['obs_time'] = data_gridded[dataname]['time']"
+    "        data_gridded[dataname]['obs_time'] = data_gridded[dataname]['time']\n",
+    "        \n",
+    "    desc[dataname] += ' (m={data[m]}, $\\Delta_v^{{-1}}$={data[delta_v_inv]})'.format(data=data_gridded[dataname])"
    ]
   },
   {
@@ -305,6 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "STOP\n",
     "desc_model = {\n",
     "    #'m1':'m1',\n",
     "    #'m2':'m2',\n",
