updated template -- planning changes to pcolormesh plots

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -65,13 +65,12 @@
     "import netCDF4 as nc4\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import dateutil.parser\n",
+    "import logging\n",
     "\n",
     "# load data\n",
     "datafiles = {\n",
-    "    #'seaflow':'data/SeaFlow_SizeDist_regrid-25-8.nc',\n",
+    "    'seaflow':'data/SeaFlow_PSD_hourlyCOUNT_v3_regrid-25-8_day2.nc',\n",
     "    'zinser':'data/Zinser_SizeDist_calibrated-26-6.nc',\n",
-    "    #'seaflow':'data/SeaFlow_PSD_hourlyCOUNT_m32.csv',\n",
     "}\n",
     "\n",
     "itestfiles = {\n",
@@ -91,49 +90,13 @@
     "        for var in nc.variables:\n",
     "            data_gridded[dataname][var] = nc.variables[var][:]\n",
     "\n",
-    "\n",
-    "for dataname in datafiles:\n",
-    "    if datafiles[dataname].endswith('.csv') and 'seaflow' in dataname:\n",
+    "    # create \"counts\" entry\n",
+    "    if 'count' not in data_gridded[dataname]:\n",
+    "        raise RuntimeError('Cannot find a \"count\" entry in \"{}\".'.format(datafiles[dataname]))\n",
     "        \n",
-    "        #\n",
-    "        # SeaFlow: if csv file is specified, load entire dataset from csv file\n",
-    "        #\n",
-    "        \n",
-    "        seaflow = pd.read_csv(datafiles[dataname])\n",
-    "        seaflow_counts = seaflow.values[:, 2:].T.astype(int)\n",
-    "\n",
-    "        # Redefine parameters to match 32-size class count data. We only keep PAR from the 25-size class data.\n",
-    "        data_gridded[dataname]['m'] = seaflow_counts.shape[0]\n",
-    "        data_gridded[dataname]['size_bounds'] = seaflow.columns[2:].values.astype(float) # extract size classes from dataframe\n",
-    "        data_gridded[dataname]['v_min'] = data_gridded[dataname]['size_bounds'][0] # note these seem to be on a different scale\n",
-    "        data_gridded[dataname]['delta_v_inv'] = int(np.round(1.0/np.log2(data_gridded[dataname]['size_bounds'][1]/data_gridded[dataname]['size_bounds'][0])))\n",
-    "        data_gridded[dataname]['w_obs'] = (seaflow_counts/np.sum(seaflow_counts, axis=0)[None, :]).astype(float)\n",
-    "        data_gridded[dataname]['counts'] = seaflow_counts\n",
-    "        data_gridded[dataname]['obs_time'] = np.empty(shape=seaflow_counts.shape[1])\n",
-    "\n",
-    "        # Extract time stamps for each observation from SeaFlow data\n",
-    "        ii = 0\n",
-    "        for timestamp in np.asarray(seaflow['time'], dtype=str):\n",
-    "            datetime = dateutil.parser.isoparse(timestamp)\n",
-    "            if ii == 0:\n",
-    "                initial = datetime\n",
-    "            data_gridded['seaflow']['obs_time'][ii] = (datetime - initial).total_seconds()/60\n",
-    "            ii += 1\n",
-    "    if 'zinser' in dataname:\n",
-    "        \n",
-    "        #\n",
-    "        # Zinser: load count data and adjust data read from netCDF file\n",
-    "        #\n",
-    "        \n",
-    "        zinser = pd.read_csv('data/Zinser_Figure2A.csv')\n",
-    "        #zinser_counts = zinser.values[:,1].astype(int) # cells A column\n",
-    "        #zinser_counts = zinser.values[:,2].astype(int) # cells B column\n",
-    "        zinser_counts = np.mean(zinser.values, axis=1).astype(int) # mean of both columns\n",
-    "\n",
-    "        # Add counts to Zinser data\n",
-    "        data_gridded[dataname]['counts'] = (data_gridded[dataname]['w_obs'] * zinser_counts).astype(int)\n",
-    "        data_gridded[dataname]['obs_time'] = data_gridded[dataname]['time']\n",
-    "        \n",
+    "    data_gridded[dataname]['counts'] = data_gridded[dataname]['count'][None,:] * data_gridded[dataname]['w_obs']\n",
+    "    \n",
+    "    # add description\n",
     "    desc[dataname] += ' (m={data[m]}, $\\Delta_v^{{-1}}$={data[delta_v_inv]})'.format(data=data_gridded[dataname])"
    ]
   },
@@ -154,13 +117,12 @@
     "if show_data:\n",
     "    for i,dataname in enumerate(data_gridded):\n",
     "        nrows = 3\n",
-    "        sharex = np.array_equal(data_gridded[dataname]['time'], data_gridded[dataname]['obs_time'])\n",
     "\n",
     "        v_min = data_gridded[dataname]['v_min']\n",
     "        delta_v = 1.0/data_gridded[dataname]['delta_v_inv']\n",
     "        v = v_min * 2**(np.arange(data_gridded[dataname]['m'])*delta_v) \n",
     "\n",
-    "        fig,axs = plt.subplots(nrows=nrows, sharex=sharex, figsize=(12,4*nrows))\n",
+    "        fig,axs = plt.subplots(nrows=nrows, sharex=True, figsize=(12,4*nrows))\n",
     "\n",
     "        ax = axs[0]\n",
     "        ax.set_title('raw '+desc[dataname], size=20)\n",
@@ -168,13 +130,13 @@
     "        ax.set(ylabel='PAR')\n",
     "\n",
     "        ax = axs[1]\n",
-    "        pc = ax.pcolormesh(data_gridded[dataname]['obs_time'],v,data_gridded[dataname]['w_obs'])\n",
+    "        pc = ax.pcolormesh(data_gridded[dataname]['time'],v,data_gridded[dataname]['w_obs'])\n",
     "        ax.set(ylabel='size ($\\mu$m$^3$)')\n",
     "        #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='size class proportion')\n",
     "\n",
     "        ax = axs[2]\n",
-    "        pc = ax.pcolormesh(data_gridded[dataname]['obs_time'],v,data_gridded[dataname]['counts'])\n",
+    "        pc = ax.pcolormesh(data_gridded[dataname]['time'],v,data_gridded[dataname]['counts'])\n",
     "        ax.set(ylabel='size ($\\mu$m$^3$)')\n",
     "        #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='counts')\n",
@@ -197,6 +159,8 @@
    "source": [
     "# prepare data for Stan model\n",
     "\n",
+    "seaflow_filter_par = False\n",
+    "\n",
     "if 'data' not in globals():\n",
     "    data = {}\n",
     "\n",
@@ -210,18 +174,21 @@
     "    if 'seaflow' in dataname:\n",
     "        limit_days = 1\n",
     "        data[dataname]['obs'] = data_gridded[dataname]['w_obs']\n",
-    "        data[dataname]['t_obs'] = data_gridded[dataname]['obs_time']\n",
-    "                \n",
-    "        # median filter PAR\n",
-    "        # see: medianfilter_par.ipynb\n",
-    "        n = len(data_gridded[dataname]['PAR'])\n",
-    "        wsh = 30 # half of median filter window size; window size is 2*wsh+1\n",
-    "        par = np.array([np.median(data_gridded[dataname]['PAR'][max(0,i-wsh):min(n,i+wsh+1)]) for i in range(n)])\n",
+    "        data[dataname]['t_obs'] = data_gridded[dataname]['time']\n",
+    "        \n",
+    "        if seaflow_filter_par:\n",
+    "            # median filter PAR\n",
+    "            # see: medianfilter_par.ipynb\n",
+    "            n = len(data_gridded[dataname]['PAR'])\n",
+    "            wsh = 30 # half of median filter window size; window size is 2*wsh+1\n",
+    "            par = np.array([np.median(data_gridded[dataname]['PAR'][max(0,i-wsh):min(n,i+wsh+1)]) for i in range(n)])\n",
+    "        else:\n",
+    "            par = data_gridded[dataname]['PAR']\n",
     "    else:\n",
     "        limit_days = 2\n",
     "        \n",
     "        data[dataname]['obs'] = data_gridded[dataname]['w_obs']\n",
-    "        data[dataname]['t_obs'] = data_gridded[dataname]['obs_time']\n",
+    "        data[dataname]['t_obs'] = data_gridded[dataname]['time']\n",
     "        par = data_gridded[dataname]['PAR']\n",
     "        \n",
     "    if limit_days > 0:\n",
@@ -312,7 +279,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STOP\n",
     "desc_model = {\n",
     "    #'m1':'m1',\n",
     "    #'m2':'m2',\n",
@@ -905,7 +871,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
     "if 'varnames_save' not in globals():\n",
     "    varnames_save = None\n",
     "\n",
