--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -130,13 +130,13 @@
     "        ax.set(ylabel='PAR')\n",
     "\n",
     "        ax = axs[1]\n",
-    "        pc = ax.pcolormesh(data_gridded[dataname]['time'],v,data_gridded[dataname]['w_obs'])\n",
+    "        pc = ax.pcolormesh(data_gridded[dataname]['time'], v, data_gridded[dataname]['w_obs'], shading='auto')\n",
     "        ax.set(ylabel='size ($\\mu$m$^3$)')\n",
     "        #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='size class proportion')\n",
     "\n",
     "        ax = axs[2]\n",
-    "        pc = ax.pcolormesh(data_gridded[dataname]['time'],v,data_gridded[dataname]['counts'])\n",
+    "        pc = ax.pcolormesh(data_gridded[dataname]['time'], v, data_gridded[dataname]['counts'], shading='auto')\n",
     "        ax.set(ylabel='size ($\\mu$m$^3$)')\n",
     "        #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='counts')\n",
@@ -172,9 +172,11 @@
     "        data[dataname][v] = data_gridded[dataname][v]\n",
     "\n",
     "    if 'seaflow' in dataname:\n",
-    "        limit_days = 1\n",
+    "        limit_days = None\n",
     "        data[dataname]['obs'] = data_gridded[dataname]['w_obs']\n",
     "        data[dataname]['t_obs'] = data_gridded[dataname]['time']\n",
+    "        if limit_days is None:\n",
+    "            limit_days = int(np.ceil(data[dataname]['t_obs'][-1]/1440))\n",
     "        \n",
     "        if seaflow_filter_par:\n",
     "            # median filter PAR\n",
@@ -195,6 +197,10 @@
     "        limit_minutes = limit_days*1440\n",
     "        \n",
     "        ind_obs = data[dataname]['t_obs'] < limit_minutes\n",
+    "        \n",
+    "        if not np.all(ind_obs):\n",
+    "            print('{}: limit_days is set to {}, removing {}/{} observation times'.format(dataname, limit_days, ind_obs.size-np.count_nonzero(ind_obs), ind_obs.size))\n",
+    "        \n",
     "        data[dataname]['t_obs'] = data[dataname]['t_obs'][ind_obs]\n",
     "        data[dataname]['obs'] = data[dataname]['obs'][:,ind_obs]\n",
     "        \n",
@@ -250,14 +256,14 @@
     "        ax.set(ylabel='E')\n",
     "\n",
     "        ax = axs[1]\n",
-    "        pc = ax.pcolormesh(data[dataname]['t_obs'],v,data[dataname]['obs'])\n",
+    "        pc = ax.pcolormesh(data[dataname]['t_obs'], v, data[dataname]['obs'], shading='auto')\n",
     "        ax.set(ylabel='size ($\\mu$m$^3$)')\n",
     "        #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='size class proportion')\n",
     "        ax.set_xlim(left=0.0)\n",
     "\n",
     "        ax = axs[2]\n",
-    "        pc = ax.pcolormesh(data[dataname]['t_obs'],v,data[dataname]['obs_count'])\n",
+    "        pc = ax.pcolormesh(data[dataname]['t_obs'], v, data[dataname]['obs_count'], shading='auto')\n",
     "        ax.set(ylabel='size ($\\mu$m$^3$)')\n",
     "        #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='counts')\n",
@@ -290,10 +296,10 @@
     "    'm8':'m8',\n",
     "    'm9':'m9',\n",
     "    'm10':'m10',\n",
-    "    'm11':'m5-m6 hybrid',\n",
-    "    'm12':'m5-m7 hybrid',\n",
-    "    'm13':'m5-m8 hybrid',\n",
-    "    'm14':'m5-m9 hybrid',\n",
+    "    'm11':'m11',\n",
+    "    'm12':'m12',\n",
+    "    'm13':'m13',\n",
+    "    'm14':'m14',\n",
     "}\n",
     "# preparing for some regular expression magic\n",
     "model_code_replacements = {\n",
@@ -827,16 +833,16 @@
     "        ax.set(xlim=(data[dataname]['t_obs'][0],t[-1]), ylabel='PAR')\n",
     "\n",
     "        ax = axs[1]\n",
-    "        pc = ax.pcolormesh(data[dataname]['t_obs'],v,res['obs'],norm=norm)\n",
+    "        pc = ax.pcolormesh(data[dataname]['t_obs'], v, res['obs'],norm=norm, shading='auto')\n",
     "        ax.set(ylabel='size ($\\mu$m$^3$)', title='size distribution data')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='size class proportion')\n",
     "\n",
     "        ax = axs[2]\n",
     "        ax.set(ylabel='size ($\\mu$m$^3$)', title='size distribution model posterior')\n",
-    "        pc = ax.pcolormesh(data[dataname]['t_obs'],v,res_sum1,norm=norm)\n",
+    "        pc = ax.pcolormesh(data[dataname]['t_obs'], v, res_sum1,norm=norm, shading='auto')\n",
     "\n",
     "        ax = axs[3]\n",
-    "        pc = ax.pcolormesh(data[dataname]['t_obs'],v,diff,norm=norm_diff, cmap='PiYG')\n",
+    "        pc = ax.pcolormesh(data[dataname]['t_obs'], v, diff,norm=norm_diff, cmap='PiYG', shading='auto')\n",
     "        ax.set(ylabel='size ($\\mu$m$^3$)', title='model - data misfit')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='difference in size class proportion')\n",
     "        \n",
