--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -94,7 +94,7 @@
     "    if 'count' not in data_gridded[dataname]:\n",
     "        raise RuntimeError('Cannot find a \"count\" entry in \"{}\".'.format(datafiles[dataname]))\n",
     "        \n",
-    "    data_gridded[dataname]['counts'] = data_gridded[dataname]['count'][None,:] * data_gridded[dataname]['w_obs']\n",
+    "    data_gridded[dataname]['counts'] = (data_gridded[dataname]['count'][None,:] * data_gridded[dataname]['w_obs']).astype(int)\n",
     "    \n",
     "    # add description\n",
     "    desc[dataname] += ' (m={data[m]}, $\\Delta_v^{{-1}}$={data[delta_v_inv]})'.format(data=data_gridded[dataname])"
@@ -287,18 +287,18 @@
    "source": [
     "desc_model = {\n",
     "    #'m1':'m1',\n",
-    "    #'m2':'m2',\n",
+    "    'm2':'m2',\n",
     "    #'m3':'m3',\n",
     "    'm4':'m4',\n",
     "    'm5':'m5',\n",
-    "    'm6':'m6',\n",
-    "    'm7':'m7',\n",
-    "    'm8':'m8',\n",
-    "    'm9':'m9',\n",
-    "    'm10':'m10',\n",
-    "    'm11':'m11',\n",
+    "    #'m6':'m6',\n",
+    "    #'m7':'m7',\n",
+    "    #'m8':'m8',\n",
+    "    #'m9':'m9',\n",
+    "    #'m10':'m10',\n",
+    "    #'m11':'m11',\n",
     "    'm12':'m12',\n",
-    "    'm13':'m13',\n",
+    "    #'m13':'m13',\n",
     "    'm14':'m14',\n",
     "}\n",
     "# preparing for some regular expression magic\n",
