updated template, will now use abundance data if count is not available

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -91,10 +91,14 @@
     "            data_gridded[dataname][var] = nc.variables[var][:]\n",
     "\n",
     "    # create \"counts\" entry\n",
-    "    if 'count' not in data_gridded[dataname]:\n",
-    "        raise RuntimeError('Cannot find a \"count\" entry in \"{}\".'.format(datafiles[dataname]))\n",
+    "    if 'count' in data_gridded[dataname]:\n",
+    "        data_gridded[dataname]['counts'] = (data_gridded[dataname]['count'][None,:] * data_gridded[dataname]['w_obs']).astype(int)\n",
+    "    elif 'abundance' in data_gridded[dataname]:\n",
+    "        logging.warning('{}: Using \"abundance\" data to generate count data for the model.'.format(dataname))\n",
+    "        data_gridded[dataname]['counts'] = (data_gridded[dataname]['count'][None,:] * data_gridded[dataname]['w_obs']).astype(int)\n",
+    "    else:\n",
+    "        raise RuntimeError('Cannot find a \"count\" or \"abundance\" entry in \"{}\".'.format(datafiles[dataname]))\n",
     "        \n",
-    "    data_gridded[dataname]['counts'] = (data_gridded[dataname]['count'][None,:] * data_gridded[dataname]['w_obs']).astype(int)\n",
     "    \n",
     "    # add description\n",
     "    desc[dataname] += ' (m={data[m]}, $\\Delta_v^{{-1}}$={data[delta_v_inv]})'.format(data=data_gridded[dataname])"
