fix in template

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -925,7 +925,7 @@
     "                \n",
     "                for imodel,model in enumerate(mcmcs):\n",
     "                    if save_only_converged and get_max_rhat(mcmcs[model][dataname]) > 1.1:\n",
-    "                        logging.warning('Model \"{}\" did not converge -- skipping.'.format(name))\n",
+    "                        logging.warning('Model \"{}\" did not converge -- skipping.'.format(model))\n",
     "                        continue\n",
     "                    ncm = ncg.createGroup(model)\n",
     "                    \n",
