--- a/experimental/exp_zs_20200910_new_seaflow_8day_part0.ipynb
+++ b/experimental/exp_zs_20200910_new_seaflow_8day_part0.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# template notebook to be expanded\n",
-    " * add description here\n",
+    "# fitting 8 days of SeaFlow data: part 0 (m2)\n",
+    " * initial test of fitting the full 8 days with the standard models and one set of parameters\n",
     " \n",
     "### general information about the different growth/respiration versions\n",
     "\n",
