--- a/experimental/exp_zs_20200909_new_seaflow.ipynb
+++ b/experimental/exp_zs_20200909_new_seaflow.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# template notebook to be expanded\n",
-    " * add description here\n",
+    "# first test of a 1 day run for the new SeaFlow dataset\n",
+    " * running all core models\n",
     " \n",
     "### general information about the different growth/respiration versions\n",
     "\n",
