--- a/old_matrixmodel_zinser_R.ipynb
+++ b/old_matrixmodel_zinser_R.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -16,59 +16,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.0     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.1     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 0.8.5\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘purrr’ was built under R version 3.6.3”\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "Loading required package: viridisLite\n",
-      "\n",
-      "Loading required package: spam\n",
-      "\n",
-      "Loading required package: dotCall64\n",
-      "\n",
-      "Loading required package: grid\n",
-      "\n",
-      "Spam version 2.5-1 (2019-12-12) is loaded.\n",
-      "Type 'help( Spam)' or 'demo( spam)' for a short introduction \n",
-      "and overview of this package.\n",
-      "Help for individual functions is also obtained by adding the\n",
-      "suffix '.spam' to the function name, e.g. 'help( chol.spam)'.\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘spam’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    backsolve, forwardsolve\n",
-      "\n",
-      "\n",
-      "Loading required package: maps\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘maps’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    map\n",
-      "\n",
-      "\n",
-      "See https://github.com/NCAR/Fields for\n",
-      " an extensive vignette, other supplements and source code \n",
-      "\n"
+     "ename": "ERROR",
+     "evalue": "Error in library(ncdf4): there is no package called ‘ncdf4’\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in library(ncdf4): there is no package called ‘ncdf4’\nTraceback:\n",
+      "1. library(ncdf4)"
      ]
     }
    ],
@@ -105,6 +58,24 @@
     "time <- as.POSIXct(time*60, origin=\"2009-05-01\")\n",
     "delta_v <- 1/delta_v_inv\n",
     "v       <- v_min*2^(0:25*delta_v) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“package ‘ndcf4’ is not available (for R version 4.0.2)”\n"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages(\"ndcf4\")"
    ]
   },
   {
@@ -755,7 +726,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "4.0.2"
   },
   "nteract": {
    "version": "0.21.0"
