script for log transformation

--- a/stan_matrixmodel_v2_zinser_R.ipynb
+++ b/stan_matrixmodel_v2_zinser_R.ipynb
@@ -284,7 +284,7 @@
     }
    ],
    "source": [
-    "df <- read_csv(\"data/Zinser_Array.csv\")[,-c(1)] %>%\n",
+    "df <- read_csv(\"data/Zinser_Array5.csv\")[,-c(1)] %>%\n",
     "            add_column(time = seq(0,48,2), .before=1) \n",
     "log.scatter <- 10^(as.numeric(colnames(df[,-c(1)]))) # logarithmically-scaled data\n",
     "DF <- as_tibble(t(as.matrix(df[,-c(1)])))\n",
