fix in template

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -200,7 +200,7 @@
     "    if limit_days > 0:\n",
     "        limit_minutes = limit_days*1440\n",
     "        \n",
-    "        ind_obs = data[dataname]['t_obs'] <= limit_minutes\n",
+    "        ind_obs = data[dataname]['t_obs'] < limit_minutes\n",
     "        \n",
     "        if not np.all(ind_obs):\n",
     "            print('{}: limit_days is set to {}, removing {}/{} observation times'.format(dataname, limit_days, ind_obs.size-np.count_nonzero(ind_obs), ind_obs.size))\n",
