--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -70,7 +70,8 @@
     "# load data\n",
     "datafiles = {\n",
     "    'seaflow':'data/SeaFlow_PSD_hourlyCOUNT_v3_regrid-25-8_day2.nc',\n",
-    "    'zinser':'data/Zinser_SizeDist_calibrated-26-6.nc',\n",
+    "    #'zinser':'data/Zinser_SizeDist_calibrated-26-6.nc',\n",
+    "    'zinser':'data/Zinser_SizeDist_logtransform-26-13.nc',\n",
     "}\n",
     "\n",
     "itestfiles = {\n",
