--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -44,6 +44,9 @@
     "# the number of tries to fit each Stan model to achieve an R-hat < 1.1\n",
     "num_tries = 3\n",
     "\n",
+    "# the number of chains to run\n",
+    "num_chains = 6\n",
+    "\n",
     "# the prior_only option passed to each Stan model\n",
     "prior_only = False"
    ]
@@ -71,7 +74,7 @@
     "datafiles = {\n",
     "    'seaflow':'data/SeaFlow_PSD_hourlyCOUNT_v3_regrid-25-8_day2.nc',\n",
     "    #'zinser':'data/Zinser_SizeDist_calibrated-26-6.nc',\n",
-    "    'zinser':'data/Zinser_SizeDist_logtransform-26-13.nc',\n",
+    "    'zinser':'data/Zinser_SizeDist_logtransform-25-7.nc',\n",
     "}\n",
     "\n",
     "itestfiles = {\n",
@@ -450,16 +453,19 @@
     "                print('{}: change in model code requires re-running model'.format(model))\n",
     "        else:\n",
     "            mcmcs[model] = {}\n",
-    "        for itry in range(num_tries):\n",
+    "        while True:\n",
     "            t0 = time.time()\n",
-    "            mcmcs[model][dataname] = models[model].sampling(data=data[dataname], iter=2000)\n",
+    "            mcmcs[model][dataname] = models[model].sampling(data=data[dataname], iter=2000, chains=num_chains)\n",
     "            sampling_time[model][dataname].append(time.time() - t0) # in seconds\n",
     "            # get max Rhat\n",
     "            rhat_max = get_max_rhat(mcmcs[model][dataname])\n",
     "            maxrhats[model][dataname].append(rhat_max)\n",
-    "            if rhat_max < 1.1:\n",
+    "            print('{}: in try {}/{} found Rhat={:.3f}'.format(model, itry+1, num_tries, rhat_max), end='')\n",
+    "            if rhat_max < 1.1 or itry == num_tries - 1:\n",
+    "                print()\n",
     "                break\n",
-    "            print('{}: in try {}/{} found Rhat={:.3f}, trying again'.format(model, itry+1, num_tries, rhat_max))\n",
+    "            print(', trying again')\n",
+    "        \n",
     "        print('{} ({})'.format(model, desc_model[model])) \n",
     "        print('\\n'.join(x for x in mcmcs[model][dataname].__str__().split('\\n') if '[' not in x))\n",
     "        print()"
@@ -1014,7 +1020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
